--- a/build.yaml
+++ b/build.yaml
@@ -13,10 +13,12 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: seeeduino_xiao_ble
     shield: PNCATEHO_left
-  - board: nice_nano_v2
-    shield: PNCATEHO_right  
+  # - board: nice_nano_v2
+  #    shield: PNCATEHO_left
+  #  - board: nice_nano_v2
+  #    shield: PNCATEHO_right  
   # - board: nice_nano_v2
   #   shield: corne_left
   # - board: nice_nano_v2
