--- a/config/boards/shields/risateno/PNCATEHO.zmk.yml
+++ b/config/boards/shields/risateno/PNCATEHO.zmk.yml
@@ -3,6 +3,6 @@ id: PNCATEHO
 name: PNCATEHO 
 type: shield
 url: https://github.com/aroum/PNCATEHO
-requires: [pro_micro]
+requires: [seeeduino_xiao_ble]
 features:
   - keys
