Update build.yaml and PNCATEHO.zmk.yml

--- a/build.yaml
+++ b/build.yaml
@@ -13,6 +13,6 @@
 #
 ---
 include:
-  #  - board: nice_nano_v2
-  - boards: seeeduino_xiao_ble
+#  - board: nice_nano_v2
+  - board: seeeduino_xiao_ble
     shield: PNCATEHO 
