--- a/config/boards/shields/risateno/PNCATEHO.conf
+++ b/config/boards/shields/risateno/PNCATEHO.conf
@@ -1,1 +1,7 @@
 CONFIG_ZMK_SLEEP=y
+
+# Tune combos to allow proper Taipo support
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=128
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=10
+CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=10
+                              
